--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </noscript>
 
 
-    <title>Қазақстан темiр жолы</title>
+    <title>KTZH «Roblox»</title>
     <link rel="alternate" hreflang="x-default" href="https://railways.kz/kk/" />
     <link rel="stylesheet" href="../../../static/assets/css/main.css">
     <link rel="stylesheet" href="../../../static/assets/css/news.css">
