--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </script>
     <meta charset="UTF-8">
     <base>
-    <link rel="shortcut icon" href="https://railways.kz/static/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="https://railways.kz/static/assets/images/logo192.png">
     <meta name="google-site-verification" content="Xkh2hJexXwy6En0sRujP5Pzb0hBkSBdoU_zFh2G3ZPc" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="#000000">
