--- a/index.html
+++ b/index.html
@@ -112,12 +112,11 @@
                                 <li>
                                     <a class="sc-kGXeez jWeeeg" href="https://ktzh-roblox.github.io/marshruty">Маршруты</a></li>
                                 <li>
-					<a class="sc-kGXeez jWeeeg" href="https://ktzh-roblox.github.io/v-razrabotke">Тарифы</a></li>
+                                    <a class="sc-kGXeez jWeeeg" href="https://ktzh-roblox.github.io/v-razrabotke">Маршруты в разработке</a></li>
                                 <li><a class="sc-kGXeez jWeeeg" href="https://ktzh-roblox.github.io/poezda">Фирменные поезда</a></li>
                                 <li>
                                     <a class="sc-kGXeez jWeeeg" href="https://ktzh-roblox.github.io/sostav">Составы KTZH Corp «Roblox»</a>
                                 </li>
-                            </ul>
 
                         <li>
                             <a class="sc-kGXeez jWeeeg" href="https://ktzh-roblox.github.io/contacts">Контакты</a>
